# langgraph-memory-redis

./: .env.sample  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
langgraph_memory_redis/: hosting.py  main.py  server.py
langgraph_memory_redis/models/: chat_message.py
langgraph_memory_redis/protocols/: i_azure_openai_service.py  i_memory_store.py
langgraph_memory_redis/services/: azure_openai_service.py  memory_store.py
tests/langgraph_memory_redis/services/: test_azure_openai_service.py  test_memory_store.py
